--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="./css/styles.css">
     </head>
 <body>
     <header class="header">
         <nav class="header-navigation">
-            <a href="./index.html" class="header-logo logo link">WebStudio</a>
+            <a href="./index.html" class="header-logo logo link"><span>Web</span>Studio</a>
             <ul class="header-list list">
                 <li class="header-item">
                     <a href="" class="header-link link">Studio</a></li>
@@ -26,19 +27,19 @@
         <address class="header-adress">
             <ul class="adress-list list">
                 <li class="adress-item">
-                    <a href="mailto:info@devstudio.com" class="adress-mail link">info@devstudio.com</a></li>
+                    <a href="mailto:info@devstudio.com" class="adress-mail link contacs">info@devstudio.com</a></li>
                 <li class="adress-item">
-                    <a href="tel:+110001111111" class="adress-tel link">+11 (000) 111-11-11</a></li>
-            </ul>    
+                    <a href="tel:+110001111111" class="adress-tel link contacs">+11 (000) 111-11-11</a></li>
+            </ul>
         </address>    
     </header>
     <main>
-        <section class="hero">
+            <section class="hero">
             <h1 class="hero-title">Effective Solutions for Your Business</h1>  
             <button type ="button" class="hero-btn btn">Order Service</button>
         </section>
         <section class="benefits"> 
-            <h2 class="visually-hidden">features</h2>
+            <h2 class="visually-hidden">Features</h2>
             <ul class="benefits-list list">
                 <li class="benefits-item">
                     <h3 class="benefits-subtitle">Strategy</h3>
@@ -59,7 +60,7 @@
             </ul>
         </section>
         <section class="about">
-            <h2 class="about-title">What are we doing</h2>
+            <h2 class="about-title title">What are we doing</h2>
             <ul class="about-list list">
                 <li class="about-item"><img src="./images/img_1.jpg" alt="Monitor" width="360" ></li>
                 <li class="about-item"><img src="./images/img_2.jpg" alt="Messengar on the phone" width="360" ></li>
@@ -67,34 +68,34 @@
             </ul>
         </section>
         <section class="team">
-            <h2 class="team-title">Our Team</h2>
+            <h2 class="team-title title">Our Team</h2>
             <ul class="team-list list">
                 <li class="team-item">
                     <img class="team-img" src="./images/photo_1.jpg" alt="Mark Guerrero" width="264">
-                    <h3 class="team-subtitle">Mark Guerrero</h3>
-                    <p class="team-text">Product Designer</p>
+                    <h3 class="team-subtitle subtitle">Mark Guerrero</h3>
+                    <p class="team-text text">Product Designer</p>
                 </li>
                 <li class="team-item">
                     <img class="team-img" src="./images/photo_2.jpg" alt="Tom Ford" width="264">
-                    <h3 class="team-subtitle">Tom Ford</h3>
-                    <p class="team-text">Frontend Developer</p>
+                    <h3 class="team-subtitle subtitle">Tom Ford</h3>
+                    <p class="team-text text">Frontend Developer</p>
                 </li>
                 <li class="team-item">
                     <img class="team-img" src="./images/photo_3.jpg" alt="Camila Garcia" width="264">
-                    <h3 class="team-subtitle">Camila Garcia</h3>
-                    <p class="team-text">Marketing</p>
+                    <h3 class="team-subtitle subtitle">Camila Garcia</h3>
+                    <p class="team-text text">Marketing</p>
                 </li>
                 <li class="team-item">
                     <img class="team-img" src="./images/photo_4.jpg" alt="Daniel Wilson" width="264">
-                    <h3 class="team-subtitle">Daniel Wilson</h3>
-                    <p class="team-text">UI Designer</p>
+                    <h3 class="team-subtitle subtitle">Daniel Wilson</h3>
+                    <p class="team-text text">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
     <footer class="footer">
-        <a href="./index.html" class="footer-logo logo link">WebStudio</a>
-        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <a href="./index.html" class="footer-logo logo link"><span>Web</span>Studio</a>
+        <p class="footer-text text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>    
 </body>
 </html>
