--- a/portfolio.html
+++ b/portfolio.html
@@ -8,12 +8,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <header class="header">
         <nav class="header-navigation">
-            <a href="./index.html" class="header-logo logo link">WebStudio</a>
+            <a href="./index.html" class="header-logo logo link"><span>Web</span>Studio</a>
             <ul class="header-list list">
                 <li class="header-item">
                     <a href="./index.html" class="header-link link">Studio</a></li>
@@ -26,9 +27,9 @@
         <address class="header-address">
             <ul class="adress-list list">
                 <li class="adress-item">
-                    <a href="mailto:info@devstudio.com" class="adress-mail link">info@devstudio.com</a></li>
+                    <a href="mailto:info@devstudio.com" class="adress-mail link contacs">info@devstudio.com</a></li>
                 <li class="adress-item">
-                    <a href="tel:+110001111111" class="adress-tel link">+11 (000) 111-11-11</a></li>
+                    <a href="tel:+110001111111" class="adress-tel link contacs">+11 (000) 111-11-11</a></li>
             </ul>    
         </address>    
     </header> 
@@ -47,55 +48,55 @@
     <ul class="gallery-list list">
         <li class="gallery-item">
             <img class="gallery-img" src="./images/img_4.jpg" alt="Banking App Interface Concept" width="360">
-            <h2 class="gallery-subtitle">Banking App Interface Concept</h2>
-            <p class="gallery-text">App</p>
+            <h2 class="gallery-subtitle subtitle">Banking App Interface Concept</h2>
+            <p class="gallery-text text">App</p>
         </li>
         <li class="gallery-item">
             <img class="gallery-img" src="./images/img_5.jpg" alt="Cashless Payment" width="360">
-            <h2 class="gallery-subtitle">Cashless Payment</h2>
-            <p class="gallery-text">Marketing</p>
+            <h2 class="gallery-subtitle subtitle">Cashless Payment</h2>
+            <p class="gallery-text text">Marketing</p>
         </li>
         <li class="gallery-item">
             <img class="gallery-img" src="./images/img_6.jpg" alt="Meditaion App" width="360">
-            <h2 class="gallery-subtitle">Meditaion App</h2>
-            <p class="gallery-text">App</p>
+            <h2 class="gallery-subtitle subtitle">Meditaion App</h2>
+            <p class="gallery-text text">App</p>
         </li>
         <li class="gallery-item">
             <img class="gallery-img" src="./images/img_7.jpg" alt="Taxi Service" width="360">
-            <h2 class="gallery-subtitle">Taxi Service</h2>
-            <p class="gallery-text">Marketing</p>
+            <h2 class="gallery-subtitle subtitle">Taxi Service</h2>
+            <p class="gallery-text text">Marketing</p>
         </li>
         <li class="gallery-item">
             <img class="gallery-img" src="./images/img_8.jpg" alt="creen Illustrations" width="360">
-            <h2 class="gallery-subtitle">Screen Illustrations</h2>
-            <p class="gallery-text">Design</p>
+            <h2 class="gallery-subtitle subtitle">Screen Illustrations</h2>
+            <p class="gallery-text text">Design</p>
         </li>
         <li class="gallery-item">
             <img class="gallery-img" src="./images/img_9.jpg" alt="Online Courses" width="360">
-            <h2 class="gallery-subtitle">Online Courses</h2>
-            <p class="gallery-text">Marketing</p>
+            <h2 class="gallery-subtitle subtitle">Online Courses</h2>
+            <p class="gallery-text text">Marketing</p>
         </li>
         <li class="gallery-item">
             <img class="gallery-img" src="./images/img_10.jpg" alt="Instagram Stories Concept" width="360">
-            <h2 class="gallery-subtitle">Instagram Stories Concept</h2>
-            <p class="gallery-text">Design</p>
+            <h2 class="gallery-subtitle subtitle">Instagram Stories Concept</h2>
+            <p class="gallery-text text">Design</p>
         </li>
         <li class="gallery-item">
             <img class="gallery-img" src="./images/img_11.jpg" alt="Organic Food" width="360">
-            <h2 class="gallery-subtitle">Organic Food</h2>
-            <p class="gallery-text">Web Site</p>
+            <h2 class="gallery-subtitle subtitle">Organic Food</h2>
+            <p class="gallery-text text">Web Site</p>
         </li>
         <li class="gallery-item">
             <img class="gallery-img" src="./images/img_12.jpg" alt="Fresh Coffee" width="360">
-            <h2 class="gallery-subtitle">Fresh Coffee</h2>
-            <p class="gallery-text">Web Site</p>
+            <h2 class="gallery-subtitle subtitle">Fresh Coffee</h2>
+            <p class="gallery-text text">Web Site</p>
         </li>
     </ul>
 </section>
     </main>
     <footer class="footer">
-        <a href="./index.html" class="footer-logo logo link">WebStudio</a>
-        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <a href="./index.html" class="footer-logo logo link"><span>Web</span>Studio</a>
+        <p class="footer-text text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>   
 </body>
 </html>
